# project-gaia

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  readme.md  rustfmt.toml
examples/mini-c/: Cargo.toml
examples/mini-c/src/: lib.rs  main.rs
examples/mini-c/src/ast/: mod.rs
examples/mini-c/src/codegen/: mod.rs
examples/mini-c/src/config/: mod.rs
examples/mini-c/src/lexer/: mod.rs  token_type.rs
examples/mini-c/src/parser/: mod.rs
examples/mini-c/tests/: main.rs
examples/mini-rust/: Cargo.toml
examples/mini-rust/output/: Output.java  output.il
examples/mini-rust/src/: codegen.rs  lib.rs  main.rs  parser.rs
examples/mini-rust/src/ast/: mod.rs
examples/mini-rust/src/codegen/: mod.rs
examples/mini-rust/src/lexer/: mod.rs  token_type.rs
examples/mini-rust/src/parser/: mod.rs
examples/mini-rust/tests/: main.rs  test.rs  test_compile.rs  test_core.rs  test_lexer_only.rs  test_pe_assembler.rs  test_runner.rs
projects/clr-assembler/: Cargo.toml  readme.md
projects/clr-assembler/src/: lib.rs
projects/clr-assembler/src/errors/: mod.rs
projects/clr-assembler/src/formats/: mod.rs
projects/clr-assembler/src/program/: mod.rs
projects/clr-assembler/src/reader/: mod.rs
projects/clr-assembler/src/writer/: mod.rs
projects/clr-assembler/tests/: hello-minimal.il  hello-simple.il  integration_test.rs  main.rs  simple_test.rs
projects/clr-assembler/tests/HelloGaia/: GaiaAssembler.cs  GaiaAssembler.expected.json  GaiaAssembler.msil
projects/clr-assembler/tests/msil_read/: analysis_msil.rs
projects/clr-assembler/tests/net_read/: mod.rs  net_dll_analysis.json
projects/clr-assembler/tests/net_write/: HelloUnity.cs  hello-asm.il  hello-multi.il  mod.rs
projects/clr-assembler/tests/test_tools/: mod.rs
projects/clr-msil/: Cargo.toml  readme.md
projects/clr-msil/src/: lib.rs
projects/clr-msil/src/easy_test/: mod.rs
projects/clr-msil/src/lexer/: mod.rs
projects/clr-msil/src/parser/: mod.rs
projects/clr-msil/src/writer/: mod.rs
projects/clr-msil/tests/: analysis_msil.rs
projects/clr-msil/tests/BasicTypes/: BasicTypes.expected.json  BasicTypes.msil
projects/clr-msil/tests/ClassDeclaration/: ClassEmpty.expected.json  ClassEmpty.msil  ClassFields.cs
projects/clr-msil/tests/ControlFlow/: ControlFlow.cs
projects/clr-msil/tests/Exceptions/: Exceptions.cs
projects/clr-msil/tests/Generics/: GenericA.cs
projects/clr-msil/tests/HelloUnity/: GaiaAssembler.cs  GaiaAssembler.expected.json  HelloUnity.expected.json
projects/elf-assembler/: Cargo.toml  readme.md
projects/elf-assembler/src/: lib.rs
projects/elf-assembler/src/assembler/: mod.rs
projects/elf-assembler/src/easy_test/: mod.rs
projects/elf-assembler/src/generator/: mod.rs
projects/elf-assembler/src/types/: mod.rs
projects/elf-assembler/src/viewer/: mod.rs
projects/elf-assembler/src/writer/: mod.rs
projects/elf-assembler/tests/: debug_pe.rs  execution_tests.rs  exit_code.rs  exit_code_tests.rs  hello_world.rs  hello_world_tests.rs  main.rs  minimal_pe.rs  standalone_hello_world.rs
projects/elf-assembler/tests/linux/: analysis_dll.rs  analysis_exe.rs  windows_exe_analysis.json
projects/elf-assembler/tests/runnable/: mod.rs
projects/elf-assembler/tests/test_tools/: mod.rs
projects/gaia-assembler/: Cargo.toml  readme.md
projects/gaia-assembler/src/: lib.rs
projects/gaia-assembler/src/adapters/: mod.rs
projects/gaia-assembler/src/assembler/: mod.rs
projects/gaia-assembler/src/backends/: mod.rs  test_mapper.rs
projects/gaia-assembler/tests/: adapter_tests.rs  backend_tests.rs  compiler_tests.rs  config_tests.rs  export_adapter_tests.rs  import_adapter_tests.rs  integration_tests.rs  mod.rs
projects/gaia-frontend/: Cargo.toml  build.rs
projects/gaia-frontend/src/: assembler.rs  easy_test.rs  lib.rs  metadata.rs  utils.rs
projects/gaia-frontend/wit/: assembler.wit  easy-test.wit  gaia-assembly.wit  metadata.wit  types.wit  utils.wit
projects/gaia-types/: Cargo.toml  readme.md
projects/gaia-types/src/: instruction.rs  lib.rs  readme.md
projects/gaia-types/tests/: invalid_range_test.rs  main.rs  readme.md
projects/jvm-assembler/: Cargo.toml  debug_jasm.rs  readme.md
projects/jvm-assembler/src/: converter.rs  lib.rs  readme.md
projects/jvm-assembler/tests/: .gitignore  HelloJava.jasm  integration_test.rs  main.rs  simple_test.rs
projects/jvm-jasm/: Cargo.toml  readme.md
projects/jvm-jasm/src/: lib.rs
projects/jvm-jasm/tests/: .gitignore  analysis_jasm.rs
projects/lua-assembler/: Cargo.toml  package.json  readme.md
projects/lua-assembler/src/: lib.rs
projects/lua-assembler/tests/: main.rs
projects/macho-assembler/: Cargo.toml  readme.md
projects/macho-assembler/src/: lib.rs
projects/macho-assembler/tests/: builder_tests.rs  dylib_tests.rs  mod.rs
projects/pe-assembler/: Cargo.toml  readme.md
projects/pe-assembler/src/: lib.rs  main.rs
projects/pe-assembler/tests/: execution_tests.rs  exit_code.rs  exit_code_tests.rs  hello_world.rs  hello_world_tests.rs  main.rs  minimal_pe.rs  readme.md  test_hello_world_pe.rs
projects/pe-coff/: Cargo.toml  readme.md
projects/pe-coff/src/: lib.rs
projects/pe-coff/tests/: main.rs
projects/pyc-assembler/: .gitignore  Cargo.toml  readme.md
projects/pyc-assembler/src/: readme.md
projects/pyc-assembler/tests/: main.rs
projects/wasi-assembler/: Cargo.toml  readme.md
projects/wasi-assembler/src/: lib.rs  readme.md
projects/wasi-assembler/tests/: main.rs  readme.md
projects/wasi.dll/: Cargo.toml
projects/wasi.dll/src/: hello.asm  lib.rs
projects/wasm-assembler/: Cargo.toml  readme.md
projects/wasm-assembler/src/: lib.rs
projects/wasm-assembler/tests/: hello.wat
projects/wasm.dll/: Cargo.toml
projects/wasm.dll/src/: lib.rs
projects/wasm.exe/: Cargo.toml
projects/wasm.exe/src/: lib.rs  main.rs
projects/wasm.exe/tests/: readme.md
projects/x86_64-assembler/: Cargo.toml  readme.md
projects/x86_64-assembler/src/: lib.rs  readme.md
projects/x86_64-assembler/tests/: debug_x64_code.rs  debug_x86_code.rs  main.rs
(+402 files in other folders)
