[workspace]
resolver = "2"
members = ["projects/*", "examples/mini-rust"]
default-members = [
    "projects/gaia-types",
    "projects/gaia-assembler",
    "projects/gaia-frontend"
]
exclude = [
    "projects/.DS_Store",
    "projects/gaia-document",
    "projects/gaia-frontend-wasm32",
]

[workspace.dependencies]

[profile.release]
lto = true
panic = "abort"
