[workspace]
resolver = "2"
members = ["projects/*", "examples/mini-rust"]
default-members = [
    "projects/gaia-types",
    "projects/wasi-assembler",
    "projects/gaia-assembler",
    "projects/gaia-frontend"
]
exclude = [
    "projects/.DS_Store",
    "projects/gaia-document",
    "projects/gaia-frontend-wasm32",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }

[workspace.dependencies.gaia-types]
version = "0.0.1"
path = "projects/gaia-types"


[profile.release]
lto = true
panic = "abort"
