[workspace]
resolver = "2"
members = [
    "projects/*",
    "examples/mini-rust",
    "examples/mini-c"
]
default-members = [
    "projects/gaia-types",
    "projects/wasi-assembler",
    "projects/gaia-assembler"
]
exclude = [
    "projects/.DS_Store",
    "projects/gaia-document"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }

[workspace.dependencies.gaia-types]
version = "0.0.3"
path = "projects/gaia-types"

[workspace.dependencies.x86_64-assembler]
version = "0.0.1"
path = "projects/x86_64-assembler"


[profile.release]
lto = true
panic = "abort"
