[package]
name = "rusty-c"
version = "0.1.0"
edition = "2024"

[dependencies]
gaia-types = { path = "../../projects/gaia-types" }
gaia-assembler = { path = "../../projects/gaia-assembler" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
url = "2.0"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "rcc"
path = "src/main.rs"
