[package]
name = "mini-rust"
version = "0.1.0"
edition = "2021"
authors = ["Aster <192607617@qq.com>"]
description = "Mini Rust language implementation for Gaia assembler"

[dependencies]
gaia-assembler = { path = "../../projects/gaia-assembler" }
gaia-types = { path = "../../projects/gaia-types" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "mini-rust"
path = "src/main.rs"

[[bin]]
name = "test_compile"
path = "src/test_compile.rs"

[[bin]]
name = "test_runner"
path = "src/test_runner.rs"