[package]
name = "mini-rust"
version = "0.1.0"
edition = "2021"
authors = ["Aster <192607617@qq.com>"]
description = "Mini Rust language implementation for Gaia assembler"

[dependencies]
gaia-assembler = { path = "../../projects/gaia-assembler" }
gaia-types = { path = "../../projects/gaia-types" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
