[package]
name = "rusty-rust"
version = "0.1.0"
edition = "2024"
authors = ["Aster <192607617@qq.com>"]
description = "Rewrite rust in rust!"

[[bin]]
name = "rrust"
path = "src/main.rs"

[dependencies]
gaia-assembler = { path = "../../projects/gaia-assembler" }
gaia-types = { path = "../../projects/gaia-types" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
