[package]
name = "clr-assembler"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/wasm.exe"
documentation = "https://docs.rs/wasm-exe"
readme = "readme.md"
license = "MPL-2.0"
edition = "2024"
exclude = ["package.json", "tests/**"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.4"
gaia-types = { path = "../gaia-types" }
pe-assembler = { path = "../pe-assembler" }
clr-msil = { path = "../clr-msil" }
url = "2.4"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]

[dev-dependencies]

[features]
default = []
easy-test = ["clr-msil/easy-test"]

[package.metadata.docs.rs]
all-features = true