[package]
name = "clr-assembler"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/wasm.exe"
documentation = "https://docs.rs/wasm-exe"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.4"
gaia-types = { path = "../gaia-types" }
pe-assembler = { path = "../pe-assembler" }
pe-coff = { path = "../pe-coff" }
url = "2.4"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]

[dev-dependencies]
serde_json = "1.0.145"
walkdir = "2.5.0"

[features]
default = []
easy-test = []

[package.metadata.docs.rs]
all-features = true