[package]
name = "clr-assembler"
version = "0.0.0"
authors = ["Project Gaia <192607617@qq.com>"]
description = "支持 x64 和 x86 指令集的现代 CLR 汇编器 - 强类型、面向对象、零依赖核心"
categories = ["compilers"]
keywords = ["clr", "assembler", "disassembler", "assembly"]
homepage = "https://github.com/nyar-vm/project-gaia"
repository = "https://github.com/nyar-vm/project-gaia"
documentation = "http://docs.rs/clr-assembler"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
byteorder = "1.5.0"
gaia-types = { workspace = true }
url = "2.5.7"
serde = { version = "1.0.0", features = ["derive"] }

[dependencies.pe-assembler]
version = "0.0.2"
path = "../pe-assembler"

[build-dependencies]

[dev-dependencies]
serde_json = "1.0.0"
gaia-types = { workspace = true, features = ["serde_json"] }
walkdir = "2.5.0"

[features]
default = []
easy-test = []

[package.metadata.docs.rs]
all-features = true
