[package]
name = "clr-msil"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/wasm.exe"
documentation = "https://docs.rs/wasm-exe"
readme = "readme.md"
license = "MPL-2.0"
edition = "2024"
exclude = ["package.json", "tests/**"]

[dependencies]
gaia-types = { path = "../gaia-types" }
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
walkdir = { version = "2.5.0", optional = true }
serde_json = { version = "1.0", optional = true }

[build-dependencies]

[dev-dependencies]

[features]
default = []
easy-test = ["walkdir", "serde_json"]

[package.metadata.docs.rs]
all-features = true