[package]
name = "elf-assembler"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "ELF assembler for Gaia project"
repository = "https://github.com/nyar-vm/project-gaia"
documentation = "https://docs.rs/elf-assembler"
readme = "readme.md"
license = "MPL-2.0"
edition = "2024"
exclude = ["package.json", "tests/**"]

[dependencies]
byteorder = "1.5.0"
gaia-types = { workspace = true }
x86_64-assembler = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"

[build-dependencies]

[dev-dependencies]
walkdir = { version = "2.5.0" }
serde_json = { version = "1.0.145" }
gaia-types = { path = "../gaia-types", features = ["serde_json"] }

[features]
default = []

[package.metadata.docs.rs]
all-features = true
