[package]
name = "gaia-assembler"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Universal assembler that compiles to multiple platforms (IL, JVM, PE, WASI)"
repository = "https://github.com/oovm/project-gaia"
documentation = "https://docs.rs/gaia-assembler"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
gaia-types = { path = "../gaia-types" }
clr-assembler = { path = "../clr-assembler" }
clr-msil = { path = "../clr-msil" }
jvm-assembler = { path = "../jvm-assembler" }
pe-assembler = { path = "../pe-assembler" }
wasi-assembler = { path = "../wasm-assembler" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
num = "0.4.0"
byteorder = "1.5.0"
ordered-float = "3.0.0"

[dev-dependencies]

[features]
default = []
easy-test = ["clr-msil/easy-test", "clr-assembler/easy-test", "pe-assembler/easy-test"]

[package.metadata.docs.rs]
all-features = true
