[package]
name = "gaia-assembler"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Universal assembler that compiles to multiple platforms (IL, JVM, PE, WASI)"
repository = "https://github.com/oovm/project-gaia"
documentation = "https://docs.rs/gaia-assembler"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
gaia-types = { path = "../gaia-types" }
clr-assembler = { path = "../clr-assembler" }
jasm-assembler = { path = "../jvm-assembler" }
pe-assembler = { path = "../pe-assembler" }
wasi-assembler = { path = "../wasi-assembler" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
num = "0.4.3"
byteorder = "1.5.0"
ordered-float = "5.1.0"

[dev-dependencies]

[features]
default = []
easy-test = ["clr-assembler/easy-test"]

[package.metadata.docs.rs]
all-features = true
