[package]
name = "gaia-types"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
url = "2.5.7"
source-map = "0.15.0"
byteorder = "1.5.0"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
