[package]
name = "jvm-assembler"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "JVM assembler and disassembler"
repository = "https://github.com/oovm/project-gaia"
documentation = "https://docs.rs/jvm-rust"
readme = "readme.md"
license = "MPL-2.0"
edition = "2024"
exclude = ["package.json", "tests/**"]

[dependencies]
gaia-types = { path = "../gaia-types" }
jvm-jasm = { path = "../jvm-jasm" }
byteorder = "1.5.0"


[features]
