[package]
name = "lua-assembler"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "解析以及写入  `.luac` 字节码"
homepage = "https://gaia-assembly.netlify.app/backends/lua/"
repository = "https://github.com/nyar-vm/project-gaia"
documentation = "https://docs.rs/lua-assembler"
readme = "readme.md"
license = "MPL-2.0"
edition = "2024"
exclude = ["package.json", "tests/**"]

[dependencies]
byteorder = "1.5.0"
gaia-types = { workspace = true }
serde = { workspace = true }

[build-dependencies]

[dev-dependencies]
gaia-types = { workspace = true, features = ["serde_json"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
tempfile = "3.23"

[features]
default = []
easy-test = []

[package.metadata.docs.rs]
all-features = true
