[package]
name = "macho-assembler"
version = "0.0.0"
edition = "2021"
description = "Mach-O assembler for x64 and ARM64"
license = "MIT"
authors = ["Gaia Project"]

[dependencies]
byteorder = "1.5"
gaia-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
x86_64-assembler = { workspace = true }

[features]
default = []

[package.metadata.docs.rs]
all-features = true