[package]
name = "pe-assembler"
version = "0.0.2"
authors = ["Project Gaia <192607617@qq.com>"]
description = "支持 x64 和 x86 指令集的现代 PE 汇编器 - 强类型、面向对象、零依赖核心"
categories = ["compilers"]
keywords = ["windows", "pe", "assembler", "disassembler", "assembly"]
homepage = "https://github.com/nyar-vm/project-gaia"
repository = "https://github.com/nyar-vm/project-gaia"
documentation = "http://docs.rs/pe-assembler"
readme = "readme.md"
license = "MPL-2.0"
edition = "2024"
exclude = ["package.json"]

[dependencies]
byteorder = "1.5.0"
gaia-types = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"

[dependencies.x86_64-assembler]
version = "0.0.1"
path = "../x86_64-assembler"

[build-dependencies]

[dev-dependencies]
walkdir = { version = "2.5.0" }
serde_json = { version = "1.0.145" }
gaia-types = { workspace = true, features = ["serde_json"] }

[features]
default = []

[package.metadata.docs.rs]
all-features = true
