[package]
name = "wasi-assembler"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/wasm.exe"
documentation = "https://docs.rs/wasm-exe"
readme = "readme.md"
license = "MPL-2.0"
edition = "2024"
exclude = ["package.json", "tests/**"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.5.0"
gaia-types = { path = "../gaia-types" }
# LEB128 编码支持
leb128 = "0.2.5"

[build-dependencies]

[dev-dependencies]
wat = "1.0.82"
wasmparser = "0.121.0"
wasmtime = "15.0.1"


[features]
default = []

[package.metadata.docs.rs]
all-features = true