[package]
name = "wasi-dll"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/wasm.exe"
documentation = "https://docs.rs/wasi-dll"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[lib]
name = "wasi"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"

[dependencies.wasmtime-wasi]
version = "18.0.0"
features = []

[dependencies.wasmtime]
version = "18.0.0"
features = ["component-model"]


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
