[package]
name = "wasm-exe"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
exe = "0.5.6"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
