[package]
name = "wasm-exe"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/wasm.exe"
documentation = "https://docs.rs/wasm-exe"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
pelite = "0.10.0"
dynasm = "2.0.0"
dynasmrt = "2.0.0"
#exe = "0.5.6"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
